# esp-openthread

./: .gitignore  .gitmodules  README.md
.github/workflows/: rust_ci.yml
build_openthread/: CMakeLists.txt  bootstrap.sh  build.sh
esp-openthread/: Cargo.toml
esp-openthread-sys/: Cargo.toml  build.rs
esp-openthread-sys/include/: include.h
esp-openthread-sys/src/: bindings.rs  lib.rs
esp-openthread/.cargo/: config.toml
esp-openthread/src/: dataset.rs  enet.rs  entropy.rs  esp.rs  lib.rs  platform.rs  radio.rs  settings.rs  srp_client.rs  timer.rs
examples/: Cargo.toml  rust-toolchain.toml
examples-esp32c6/: Cargo.toml
examples-esp32c6/src/: main.rs
examples/.cargo/: config.toml
examples/.github/workflows/: rust_ci.yml
examples/esp/: Cargo.toml  build.rs
examples/esp/.cargo/: config.toml
examples/nrf/: Cargo.toml  build.rs
examples/nrf/.cargo/: config.toml
examples/src/: main.rs
openthread/: Cargo.toml
openthread-sys/: CMakeLists.txt  Cargo.toml  build.rs
openthread-sys/platform/src/: CMakeLists.txt  alarm.c
openthread-sys/src/: bindings.rs  lib.rs
openthread-sys/src/include/: riscv32imac-unknown-none-elf.rs  thumbv6m-none-eabi.rs  thumbv7em-none-eabi.rs
openthread/src/: dataset.rs  enal.rs  enet.rs  esp.rs  fmt.rs  lib.rs  nrf.rs  platform.rs  radio.rs  scan.rs  settings.rs  signal.rs  srp.rs  srp_client.rs  udp.rs
xtask/: Cargo.toml
xtask/src/: main.rs
