[package]
name = "esp-openthread"
version = "0.5.0"
edition = "2021"

[dependencies]
esp-openthread-sys = { path = "../esp-openthread-sys" }
esp-hal = {version= "0.21.1", git = "https://github.com/esp-rs/esp-hal.git",  rev="39c0baf2c7bf3a45cd16a844f100c52d84c9b727"}
esp-hal-procmacros = {version= "0.14.0", git = "https://github.com/esp-rs/esp-hal.git", features=["interrupt"], rev="39c0baf2c7bf3a45cd16a844f100c52d84c9b727"}
esp-ieee802154 = {version= "0.3.1", git = "https://github.com/esp-rs/esp-hal.git", rev="39c0baf2c7bf3a45cd16a844f100c52d84c9b727"}
log = "0.4.21"
critical-section = "1.1.1"
fugit = "0.3.7"
bitflags = "2.5.0"
heapless = "0.8.0"
no-std-net = "0.6.0"

[features]
esp32c6 = [ "esp-ieee802154/esp32c6", "esp-hal/esp32c6"]
esp32h2 = [ "esp-ieee802154/esp32h2", "esp-hal/esp32h2"]
srp-client = []