[package]
name = "examples_esp32c6"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c6-hal", version = "0.6.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.7.0", features = ["esp32c6", "log"] }
heapless = "0.7.16"
no-std-net = "0.6.0"

esp-ieee802154 = { git = "https://github.com/esp-rs/esp-ieee802154.git", rev = "b7450029e492a36a36a77aad9f96327618cc6ed8", features = ["esp32c6"] }
esp-openthread = { path = "../esp-openthread", features = ["esp32c6"] }
