[package]
name = "esp-openthread-examples"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp-alloc = {version= "0.5.0", git = "https://github.com/esp-rs/esp-hal.git", rev="39c0baf2c7bf3a45cd16a844f100c52d84c9b727", optional=true}
esp-hal = {version= "0.21.1", git = "https://github.com/esp-rs/esp-hal.git", rev="39c0baf2c7bf3a45cd16a844f100c52d84c9b727"}
esp-backtrace = { version="0.14.2", git = "https://github.com/esp-rs/esp-hal.git", features = ["panic-handler", "exception-handler", "println"], rev="39c0baf2c7bf3a45cd16a844f100c52d84c9b727" }
esp-println       = { version= "0.12.0", git = "https://github.com/esp-rs/esp-hal.git", features = ["log"], rev="39c0baf2c7bf3a45cd16a844f100c52d84c9b727" }
esp-ieee802154 = {version= "0.3.1", git = "https://github.com/esp-rs/esp-hal.git", rev="39c0baf2c7bf3a45cd16a844f100c52d84c9b727"}
log = "0.4.21"
heapless = "0.8.0"
no-std-net = "0.6.0"
critical-section = "1.1.0"
static_cell = "2.1.0"

esp-openthread = { path = "../esp-openthread" }

[features]
esp32c6 = [ "esp-hal/esp32c6", "esp-ieee802154/esp32c6", "esp-openthread/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6" ]
esp32h2 = [ "esp-hal/esp32h2", "esp-ieee802154/esp32h2", "esp-openthread/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2" ]
srp-client = ["esp-openthread/srp-client", "dep:esp-alloc"]

[[bin]]
path = "./src/bin/basic_example.rs"
name = "esp-openthread-examples"

[[bin]]
path = "./src/bin/srp_client.rs"
name = "srp-client-example"
required-features=["srp-client"]