[package]
name = "esp-openthread-examples"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp-alloc = { version = "0.6", optional = true }
esp-hal = "0.23.1"
esp-backtrace = { version = "0.15", features = ["panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.13", features = ["log"] }
esp-ieee802154 = "0.5"
log = "0.4.21"
heapless = "0.8.0"
no-std-net = "0.6.0"
critical-section = "1.1.0"
static_cell = "2.1.0"

esp-openthread = { path = "../esp-openthread" }

[features]
esp32c6 = [ "esp-hal/esp32c6", "esp-ieee802154/esp32c6", "esp-openthread/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6" ]
esp32h2 = [ "esp-hal/esp32h2", "esp-ieee802154/esp32h2", "esp-openthread/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2" ]
srp-client = ["esp-openthread/srp-client", "dep:esp-alloc"]

[[bin]]
path = "./src/bin/basic_example.rs"
name = "esp-openthread-examples"

#[[bin]]
#path = "./src/bin/srp_client.rs"
#name = "srp-client-example"
#required-features=["srp-client"]