[package]
name = "openthread-sys"
version = "0.1.0"
edition = "2021"

[features]
default = []

# Exactly *one* chip MUST be selected via its feature:
esp32 = []
esp32s2 = []
esp32s3 = []
esp32c3 = []
esp32c6 = []

[dependencies]

[build-dependencies]
anyhow = "1"
bindgen = "0.71"
env_logger = "0.10"
log = "0.4"
cmake = "0.1.52"
fs_extra = "1.3"
embuild = "0.33"
