[package]
name = "openthread"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

[features]
default = ["esp32c6", "udp", "srp", "embassy-net-driver-channel", "edge-nal"]
edge-nal = ["udp", "dep:edge-nal"]
udp = []
srp = ["udp"]
esp32c6 = ["openthread-sys/esp32c6", "esp-ieee802154/esp32c6"]
esp32h2 = ["esp-ieee802154/esp32h2"]

[dependencies]
openthread-sys = { path = "../openthread-sys" }
log = { version = "0.4", default-features = false }
scopeguard = { version = "1", default-features = false }
rand_core = "0.6"
embassy-sync = "0.6"
embassy-time = "0.4"
embassy-futures = "0.1"
embassy-net-driver-channel = { version = "0.3", optional = true }
edge-nal = { version = "0.5", optional = true }
heapless = "0.8"
bitflags = "2.5"
esp-ieee802154 = { version = "0.5", optional = true }
