[package]
name = "openthread"
version = "0.1.0"
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["thread", "openthread", "embedded", "embassy"]
description = "Raw bindings for OpenThread"
repository = "https://github.com/ivmarkov/esp-openthread"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.84"

[lib]
harness = false

[features]
default = []
edge-nal = ["udp", "dep:edge-nal"]
udp = []
srp = ["udp"]
force-generate-bindings = ["openthread-sys/force-generate-bindings"]
force-esp-riscv-toolchain = ["openthread-sys/force-esp-riscv-toolchain"]
isupper = [] # Provide internal implementation of the `isupper` C fn

[dependencies]
openthread-sys = { path = "../openthread-sys" }
log = { version = "0.4", default-features = false }
scopeguard = { version = "1", default-features = false }
rand_core = "0.6"
embassy-sync = "0.6"
embassy-time = "0.4"
embassy-futures = "0.1"
heapless = "0.8"
bitflags = "2.5"
embassy-net-driver-channel = { version = "0.3", optional = true }
edge-nal = { version = "0.5", optional = true }
esp-ieee802154 = { version = "0.5", optional = true }
embassy-nrf = { version = "0.3", optional = true }
portable-atomic = "1"
