[package]
name = "esp-openthread-examples"
version = "0.1.0"
edition = "2021"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["thread", "openthread", "embedded", "embassy"]
description = "openthread examples for Espressif chips"
repository = "https://github.com/ivmarkov/esp-openthread"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.84"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "z"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
opt-level = "z"
lto = "fat"
debug = 2
debug-assertions = false
overflow-checks = false

[features]
default = ["esp32c6"]
esp32c6 = [ "esp-hal-embassy/esp32c6", "esp-ieee802154/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6"]
esp32h2 = [ "esp-hal-embassy/esp32h2", "esp-ieee802154/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2"]

[dependencies]
embassy-executor = { version = "0.7", features = ["task-arena-size-32768", "defmt"] }
embassy-sync = "0.6"
embassy-futures = "0.1"
embassy-time = "0.4"
embassy-net = { version = "0.6", features = ["proto-ipv6", "medium-ip", "udp", "defmt"] }
esp-hal = { version = "0.23.1", features = ["defmt"] }
esp-hal-embassy = "0.6"
esp-alloc = { version = "0.6", optional = true }
esp-backtrace = { version = "0.15", features = ["panic-handler", "exception-handler", "defmt"] }
esp-println = { version = "0.13", features = ["defmt-espflash"] }
esp-ieee802154 = "0.5"
defmt = "0.3"
heapless = "0.8"
critical-section = "1.2"
rand_core = "0.6"
static_cell = "2.1"

openthread = { path = "../../openthread", features = ["udp", "srp", "embassy-net-driver-channel", "esp-ieee802154", "isupper", "defmt"] }
tinyrlibc = { version = "0.5", default-features = false, features = ["utoa", "strtoul"] }

[[bin]]
path = "./src/bin/basic_enet.rs"
name = "basic_enet"
#required-features = ["embassy-net-driver-channel"]
harness = false

[[bin]]
path = "./src/bin/basic_udp.rs"
name = "basic_udp"
#required-features = ["udp"]
harness = false

[[bin]]
path = "./src/bin/srp.rs"
name = "srp"
#required-features=["srp"]
harness = false
