[package]
name = "nrf-openthread-examples"
version = "0.1.0"
edition = "2021"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["thread", "openthread", "embedded", "embassy"]
description = "openthread examples for NRF chips"
repository = "https://github.com/ivmarkov/esp-openthread"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.84"

[profile.release]
debug = true
opt-level = "s"

[profile.dev]
opt-level = "z"

[features]
default = []

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
rtt-target = { version = "0.6", features = ["log"] }
panic-rtt-target = "0.2"
embassy-executor = { version = "0.7", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "log"] }
embassy-sync = { version = "0.6", features = ["log"] }
embassy-futures = "0.1"
embassy-time = { version = "0.4", features = ["log"] }
embassy-net = { version = "0.6", features = ["log", "proto-ipv6", "medium-ip", "udp"] }
embassy-nrf = { version = "0.3", features = ["log", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
log = "0.4"
heapless = "0.8"
critical-section = "1.1"
rand_core = "0.6"
static_cell = "2.1"

openthread = { path = "../../openthread", features = ["udp", "srp", "embassy-net-driver-channel", "embassy-nrf"] }
tinyrlibc = { version = "0.5", default-features = false, features = ["strstr", "strcmp", "isupper", "utoa", "strtoul"] }

[[bin]]
path = "./src/bin/basic_enet.rs"
name = "basic_enet"
#required-features = ["embassy-net-driver-channel"]
harness = false

[[bin]]
path = "./src/bin/basic_udp.rs"
name = "basic_udp"
#required-features = ["udp"]
harness = false

[[bin]]
path = "./src/bin/srp.rs"
name = "srp"
#required-features=["srp"]
harness = false
